--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -355,7 +355,7 @@
     "TL;DR: Local minima become less of a problem as you increase the dimension of your architecture, \n",
     "however saddle points can give the illusion of local minima. \n",
     "\n",
-    "It is a good paper, and focuses on the \n",
+    "It's a good paper, worth a look over.\n",
     "\n",
     "[Identifying and attacking the saddle point problem in high-dimensional non-convex optimization](https://arxiv.org/abs/1406.2572)"
    ],
