--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -410,7 +410,7 @@
     "    w2 -= lr * grad_w2\n",
     "    b -= lr * grad_b"
    ],
-   "execution_count": 33,
+   "execution_count": 92,
    "outputs": []
   },
   {
@@ -429,7 +429,7 @@
     "  test_loss += 0.5 * ((w1 * test_xs1[i] + b + test_xs2[i] * w2)- test_ys[i]) ** 2\n",
     "test_loss /= 20"
    ],
-   "execution_count": 34,
+   "execution_count": 93,
    "outputs": []
   },
   {
@@ -449,15 +449,15 @@
    "source": [
     "test_loss"
    ],
-   "execution_count": 35,
+   "execution_count": 94,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([0.04995238])"
+      "text/plain": "array([0.04989865])"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 35
+     "execution_count": 94
     }
    ]
   },
@@ -488,7 +488,7 @@
     "\n",
     "MNIST = datasets.load_digits()"
    ],
-   "execution_count": 36,
+   "execution_count": 95,
    "outputs": []
   },
   {
@@ -510,7 +510,7 @@
     "plt.imshow(train_ave, cmap='gray')\n",
     "plt.show()"
    ],
-   "execution_count": 37,
+   "execution_count": 96,
    "outputs": [
     {
      "data": {
@@ -543,7 +543,7 @@
     "plt.imshow(train_ave, cmap='gray')\n",
     "plt.show()"
    ],
-   "execution_count": 38,
+   "execution_count": 97,
    "outputs": [
     {
      "data": {
@@ -576,7 +576,7 @@
     "plt.imshow(train_ave, cmap='gray')\n",
     "plt.show()"
    ],
-   "execution_count": 39,
+   "execution_count": 98,
    "outputs": [
     {
      "data": {
@@ -609,7 +609,7 @@
     "plt.imshow(train_ave, cmap='gray')\n",
     "plt.show()"
    ],
-   "execution_count": 40,
+   "execution_count": 99,
    "outputs": [
     {
      "data": {
@@ -642,7 +642,7 @@
     "plt.imshow(train_ave, cmap='gray')\n",
     "plt.show()"
    ],
-   "execution_count": 41,
+   "execution_count": 100,
    "outputs": [
     {
      "data": {
@@ -675,7 +675,7 @@
     "plt.imshow(train_ave, cmap='gray')\n",
     "plt.show()"
    ],
-   "execution_count": 42,
+   "execution_count": 101,
    "outputs": [
     {
      "data": {
@@ -708,7 +708,7 @@
     "plt.imshow(train_ave, cmap='gray')\n",
     "plt.show()"
    ],
-   "execution_count": 43,
+   "execution_count": 102,
    "outputs": [
     {
      "data": {
@@ -741,7 +741,7 @@
     "plt.imshow(train_ave, cmap='gray')\n",
     "plt.show()"
    ],
-   "execution_count": 44,
+   "execution_count": 103,
    "outputs": [
     {
      "data": {
@@ -774,7 +774,7 @@
     "plt.imshow(train_ave, cmap='gray')\n",
     "plt.show()"
    ],
-   "execution_count": 45,
+   "execution_count": 104,
    "outputs": [
     {
      "data": {
@@ -799,7 +799,8 @@
      "height": 269
     },
     "pycharm": {
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%%\n"
     }
    },
    "source": [
@@ -807,7 +808,7 @@
     "plt.imshow(train_ave, cmap='gray')\n",
     "plt.show()"
    ],
-   "execution_count": 46,
+   "execution_count": 105,
    "outputs": [
     {
      "data": {
@@ -820,22 +821,6 @@
      "output_type": "display_data"
     }
    ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {
-    "id": "KMscwcNoYeXL",
-    "colab_type": "code",
-    "colab": {},
-    "pycharm": {
-     "is_executing": false
-    }
-   },
-   "source": [
-    ""
-   ],
-   "execution_count": 46,
-   "outputs": []
   }
  ]
 }
