--- a/Homework1.ipynb
+++ b/Homework1.ipynb
@@ -373,8 +373,43 @@
     "colab_type": "text"
    },
    "source": [
-    "# Part 2 - Gradient Descent Strikes Back\n"
+    "# Part 2 - Gradient Descent Strikes Back"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# number of epochs\n",
+    "epochs = 50\n",
+    "# learning rate\n",
+    "lr = 0.01\n",
+    "\n",
+    "# initial value for weight w and bias b\n",
+    "w1 = np.random.randn(1)\n",
+    "w2 = np.random.randn(1)\n",
+    "b = np.zeros(1)\n",
+    "\n",
+    "# Training time\n",
+    "for epoch in np.arange(epochs):\n",
+    "  for i in np.arange(80):\n",
+    "    y_pred = w1 * train_xs1[i] + w2 * train_xs2[i] + b\n",
+    "    \n",
+    "    grad_w1 = (y_pred - train_ys[i]) * train_xs1[i]\n",
+    "    grad_w2 = (y_pred - train_ys[i]) * train_xs2[i]\n",
+    "    grad_b = (y_pred - train_ys[i])\n",
+    "    \n",
+    "    w1 -= lr * grad_w1\n",
+    "    w2 -= lr * grad_w2\n",
+    "    b -= lr * grad_b"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
